# infphyny-framework

./: CMakeLists.txt  COPYING  README.md
example/: CMakeLists.txt
example/math/: CMakeLists.txt  ray.hpp
example/math/bernstein/: CMakeLists.txt  main.cpp  pltbias.m
example/math/bezier/: CMakeLists.txt  main.cpp
example/math/bias/: CMakeLists.txt  main.cpp  pltbias.m
example/math/bspline/: CMakeLists.txt  main.cpp  plotbezier3.m
example/math/decasteljau/: CMakeLists.txt  main.cpp
example/math/horner1/: CMakeLists.txt  main.cpp
example/math/mat4/: CMakeLists.txt  CMakeLists.txt~  main.cpp
example/math/quaternion/: CMakeLists.txt  main.cpp
include/fileutils/: fileutils.hpp
include/math/: aabox.hpp  bernstein.hpp  bezier.hpp  bias.hpp  bspline.hpp  clamp.hpp  constant.hpp  decasteljau.hpp  fade.hpp  gain.hpp  horner.hpp  horner1.hpp  lerp.hpp  mat2.hpp  mat3.hpp  mat4.hpp  math.hpp  normalize.hpp  quaternion.hpp  transparency.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/std/: limits.hpp
src/fileutils/: fileutils.cpp
